# HW28

./: db.sqlite3  pyproject.toml
ads/: models.py  views.py
ads/migrations/: 0001_initial.py
ads/urls/: ad_urls.py
data/: csv_to_json.py
e_store/: settings.py  urls.py
users/: models.py  views.py
users/migrations/: 0001_initial.py  0002_alter_location_lat_alter_location_lng_and_more.py
