[tool.poetry]
name = "hw28"
version = "0.1.0"
description = ""
authors = ["Stavitskii <pochta100@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
psycopg = "^3.1.3"
Pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
